Updating Rancher config

--- a/add-ons/values/rancher.yaml
+++ b/add-ons/values/rancher.yaml
@@ -2,4 +2,8 @@ hostname: ${hostname}
 bootstrapPassword: ${bootstrapPassword}
 ingress:
   tls:
-    source: rancher
+    source: letsEncrypt
+letsEncrypt:
+  email: ${email}
+  ingress: 
+    class: nginx
